update pythod.com to www.pythod.com

--- a/src/pages/03-hello-world/0301-interactive-hello-world.mdx
+++ b/src/pages/03-hello-world/0301-interactive-hello-world.mdx
@@ -5,7 +5,7 @@ description: "The article explains how to use Python's interactive mode, which a
 
 ## 交互模式
 
-还记得我们在[《Python 解释器》](https://pythod.com/02-python-install/0203-python-interpreter)那一节所介绍的“交互模式”吗？对，“交互模式”就是你可以在解释器中输入单行或多行 Python 代码，然后立即得到结果的运行模式。
+还记得我们在[《Python 解释器》](https://www.pythod.com/02-python-install/0203-python-interpreter)那一节所介绍的“交互模式”吗？对，“交互模式”就是你可以在解释器中输入单行或多行 Python 代码，然后立即得到结果的运行模式。
 
 对初学者而言，“交互模式”是一种很好的学习 Python 和测试代码的方式。
 
