--- a/src/pages/05-data-type/0504-data-type-byte.mdx
+++ b/src/pages/05-data-type/0504-data-type-byte.mdx
@@ -5,7 +5,7 @@ description: "The article discusses bytes in Python, explaining that a byte is m
 
 ## 引子
 
-在[《5.3 节 - 字符串类型》](https://pythod.com/05-data-type/0503-data-type-string)中，我们学习了字符串的基本概念和简单操作；本节和后面几节会更加深入地探讨一下在 Python 中与字符串相关的概念：字节、Unicode、字符编码和解码以及字符串存储。
+在[《5.3 节 - 字符串类型》](https://www.pythod.com/05-data-type/0503-data-type-string)中，我们学习了字符串的基本概念和简单操作；本节和后面几节会更加深入地探讨一下在 Python 中与字符串相关的概念：字节、Unicode、字符编码和解码以及字符串存储。
 
 这些概念有助于初学者理解 Python 是如何在计算机中处理字符串的。
 
