--- a/src/pages/10-oop/1007-oop.mdx
+++ b/src/pages/10-oop/1007-oop.mdx
@@ -24,7 +24,7 @@ description: "The article discusses Object-Oriented Programming (OOP) in Python,
 
 ### 1. Python 中的类和对象
 
-在 Python 中，一切都是对象。这意味着我们可以轻松创建和操作对象。如在[《10.2 类》](https://pythod.com/10-oop/1002-class)这一节中讲解的，我们可以使用类来定义新的自定义对象。
+在 Python 中，一切都是对象。这意味着我们可以轻松创建和操作对象。如在[《10.2 类》](https://www.pythod.com/10-oop/1002-class)这一节中讲解的，我们可以使用类来定义新的自定义对象。
 
 举个例子：
 
