--- a/src/pages/09-advanced-statement/0904-conditional-expression.mdx
+++ b/src/pages/09-advanced-statement/0904-conditional-expression.mdx
@@ -5,7 +5,7 @@ description: "This article explains how to use Python's if-elif-else statements 
 
 ## 基本概念
 
-在上一节中，我们讲解了 Python 中的条件语句，也就是 `if-elif-else` 语句。我们知道，Python 中的条件语句通过判断“条件”为真或假来执行不同的代码。同时，我们在[《5.5 布尔类型》](https://pythod.com/05-data-type/0505-data-type-boolean)一节中，详细介绍了 Python 中的布尔运算符，如`<`、`=`、`>`、`and`、`not`等。在实际开发中，我们可以通过将这些布尔运算符与 `if-elif-else` 语句结合在一起，来生成复杂的条件判断。
+在上一节中，我们讲解了 Python 中的条件语句，也就是 `if-elif-else` 语句。我们知道，Python 中的条件语句通过判断“条件”为真或假来执行不同的代码。同时，我们在[《5.5 布尔类型》](https://www.pythod.com/05-data-type/0505-data-type-boolean)一节中，详细介绍了 Python 中的布尔运算符，如`<`、`=`、`>`、`and`、`not`等。在实际开发中，我们可以通过将这些布尔运算符与 `if-elif-else` 语句结合在一起，来生成复杂的条件判断。
 
 ## 基本用法
 
