update index.mdx to emphasize pythod.com

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,11 +5,11 @@ description: "This place provides a comprehensive introduction to Python program
 
 欢迎学习 Python 编程。
 
-Pythod 是为希望深入了解 Python 的用户准备的，从基础到进阶，我们将一步步探索。
+**Pythod.com** 是为希望深入了解 Python 的用户准备的，从基础到进阶，我们将一步步探索。
 
-Python 是一种功能强大的编程语言，适用于多种编程任务。Pythod 从 Python 的安装和基本语法讲起，并逐步介绍面向对象编程、文件和数据库操作等关键技能。
+Python 是一种功能强大的编程语言，适用于多种编程任务。**Pythod.com** 从 Python 的安装和基本语法讲起，并逐步介绍面向对象编程、文件和数据库操作等关键技能。
 
-选择 Pythond，就是选择了一个充满挑战与发现的学习之路。希望它能够成为您值得信赖的指南，让您的编程旅程更加顺畅。
+选择 **Pythod.com**，就是选择了一个充满挑战与发现的学习之路。希望它能够成为您值得信赖的指南，让您的编程旅程更加顺畅。
 
 祝编程愉快！
 
