--- a/src/pages/05-data-type/0509-data-type-set.mdx
+++ b/src/pages/05-data-type/0509-data-type-set.mdx
@@ -89,7 +89,9 @@ set1 - set2
 
 下面，我们来详细地学习一下 Python 中常用的内置集合处理方法。
 
-### 1. `add()`：向集合中添加单个元素。
+### 1. `add()`
+
+    方法 `add()` 可以向集合中添加单个元素。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -98,7 +100,9 @@ set1 - set2
     {1, 2, 3, 4}
     ```
 
-### 2. `update()`：向集合中添加多个元素（可以是列表、元组或其他集合）。
+### 2. `update()`
+
+    方法 `update()` 可以向集合中添加多个元素（可以是列表、元组或其他集合）。
 
     ```python {3}
     >>> my_set = {1, 2, 3}
@@ -108,7 +112,9 @@ set1 - set2
     {1, 2, 3, 4, 5}
     ```
 
-### 3. `remove()`：从集合中删除单个元素。如果该元素不存在，会抛出 `KeyError` 异常。
+### 3. `remove()`
+
+    方法 `remove()` 可以从集合中删除单个元素。如果该元素不存在，会抛出 `KeyError` 异常。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -117,7 +123,9 @@ set1 - set2
     {1, 3}
     ```
 
-### 4. `discard()`：从集合中删除单个元素。如果该元素不存在，不会抛出异常。
+### 4. `discard()`
+
+    方法 `discard()` 可以从集合中删除单个元素。如果该元素不存在，不会抛出异常。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -126,7 +134,9 @@ set1 - set2
     {1, 3}
     ```
 
-### 5. `pop()`：随机地从集合中删除一个元素，并返回该元素。如果集合为空，会抛出 `KeyError` 异常。
+### 5. `pop()`
+
+    方法 `pop()` 可以随机地从集合中删除一个元素，并返回该元素。如果集合为空，会抛出 `KeyError` 异常。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -137,7 +147,9 @@ set1 - set2
     {2, 3}
     ```
 
-### 6. `clear()`：清空集合中的所有元素。
+### 6. `clear()`
+
+    方法 `clear()` 可以清空集合中的所有元素。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -146,7 +158,9 @@ set1 - set2
     set()
     ```
 
-### 7. `copy()`：返回集合的浅拷贝。
+### 7. `copy()`
+
+    方法 `copy()` 可以返回集合的浅拷贝。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -155,7 +169,9 @@ set1 - set2
     {1, 2, 3}
     ```
 
-### 8. `len()`：计算集合的长度，即集合中元素的数量。
+### 8. `len()`
+
+    方法 `len()` 可以计算集合的长度，即集合中元素的数量。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -163,7 +179,9 @@ set1 - set2
     3
     ```
 
-### 9. `in`：判断指定的元素是否在集合中。
+### 9. `in`
+
+    方法 `in` 可以判断指定的元素是否在集合中。
 
     ```python {2}
     >>> my_set = {1, 2, 3}
@@ -171,7 +189,9 @@ set1 - set2
     True
     ```
 
-### 10. `union()`：计算两个集合的并集。
+### 10. `union()`
+
+    方法 `union()` 可以计算两个集合的并集。
 
     ```python {3}
     >>> set1 = {1, 2, 3}
@@ -181,7 +201,9 @@ set1 - set2
     {1, 2, 3, 4, 5}
     ```
 
-### 11. `intersection()`：计算两个集合的交集。
+### 11. `intersection()`
+
+    方法 `intersection()` 可以计算两个集合的交集。
 
     ```python {3}
     >>> set1 = {1, 2, 3}
@@ -191,7 +213,9 @@ set1 - set2
     {3}
     ```
 
-### 12. `difference()`：计算两个集合的差集。
+### 12. `difference()`
+
+    方法 `difference()` 可以计算两个集合的差集。
 
     ```python {3}
     >>> set1 = {1, 2, 3}
@@ -201,7 +225,9 @@ set1 - set2
     {1, 2}
     ```
 
-### 13. `symmetric_difference()`：计算两个集合的对称差集。
+### 13. `symmetric_difference()`
+
+    方法 `symmetric_difference()` 可以计算两个集合的对称差集。
 
     ```python {3}
     >>> set1 = {1, 2, 3}
@@ -211,7 +237,9 @@ set1 - set2
     {1, 2, 4, 5}
     ```
 
-### 14. `issubset()`：判断一个集合是否是另一个集合的子集。
+### 14. `issubset()`
+
+    方法 `issubset()` 可以判断一个集合是否是另一个集合的子集。
 
     ```python {3}
     >>> set1 = {1, 2}
@@ -220,7 +248,9 @@ set1 - set2
     True
     ```
 
-### 15. `issuperset()`：判断一个集合是否是另一个集合的超集。
+### 15. `issuperset()`
+
+    方法 `issuperset()` 可以判断一个集合是否是另一个集合的超集。
 
     ```python {3}
     >>> set1 = {1, 2, 3, 4, 5}
@@ -229,7 +259,7 @@ set1 - set2
     True
     ```
 
-### 16. `|`、`&` 和 `-`：
+### 16. `|`、`&` 和 `-`
 
 此外，我们还可以使用 `|`、`&` 和 `-` 运算符来计算集合的并集、交集和差集，例如：
 
