--- a/src/pages/14-accelerated-function/1401-iteration.mdx
+++ b/src/pages/14-accelerated-function/1401-iteration.mdx
@@ -141,7 +141,7 @@ for item in my_iterable:
 
 ## 迭代器与`next()`方法
 
-我们在前面讲过，Python 中的列表、元组、集合和字符串等数据类型都是可迭代对象。这意味着我们可以使用`for`循环或其他迭代结构来遍历它们的元素；但这并意味着所有可迭代对象都支持`next()`方法。
+我们在前面讲过，Python 中的列表、元组、集合和字符串等数据类型都是可迭代对象。这意味着我们可以使用`for`循环或其他迭代结构来遍历它们的元素；但这并不意味着所有可迭代对象都支持`next()`方法。
 
 这里需要澄清的是，当我们在使用`for`循环进行迭代时，我们无需使用`next()`方法，因为 Python 在幕后为我们处理迭代过程。例如：
 
